# dbt-tpch-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dev.example.env  profiles.yml  pyproject.toml
.astro/: config.yaml
dags/: dbt_dag.py
dags/dbt/tpch-pipeline/: dbt_project.yml  profiles.yml
dags/dbt/tpch-pipeline/models/marts/: fct_orders.sql
dags/dbt/tpch-pipeline/scripts/: setup_dwh.sql  teardown_dwh.sql
dags/dbt/tpch-pipeline/tests/: fct_orders_date_valid.sql  fct_orders_discount.sql
tests/dags/: test_dag.py
