[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["c.san <80271352+csanry@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.8.0"
dbt-snowflake = "^1.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"
isort = "^5.12"
pre-commit = "^3.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
